- Add logging level ELL_DEBUG

- Add parameter DisplayAdapter to creation params to allow selecting the card when more than one card is in the system.

- Add parameter to line2d::intersectWith to allow getting intersections outside the segments (thx Yoran).

- Added support for custom cursors

- Avoid argument lookup ambiguity in swap when used in combination with stl. Using same trick as boost now and use 2 different template parameters in it.

- Fixed bug causing memory access violation in string::replace found and patched by Nalin.

- WM_SYSCOMMAND - SC_KEYMENU message is now ignored (F10 and ALT in Win32 windowed mode)

-----------------------------
Changes in 1.7.1 (17.02.2010)

 - Fix octree with frustum+parent checks enabled (didn't clip at all before). Now using plane-checks instead of edge-checks for frustum-box intersection.
 
 - Prevent that X11 selects larger resolutions in fullscreen even when perfect fits are available.

 - Ignore setResizable also on X11 when we're fullscreen to avoid messing up the window mode.

 - Work around a crash when pressing ESC after closing a Messagebox (found by Acki) 

 - Prevent borland compile warnings in SColorHSL::FromRGB and in SVertexColorThresholdManipulator (found by mdeininger)

 - Improve Windows version detection rules (Patch from brferreira)

 - Make it compile on Borland compilers (thx to mdeininger)

 - Make sure that CAnimatedMeshSceneNode::clone calls the virtual updateAbsolutePosition for the new object

 - Fix that clones got dropped too often when SceneNodes without parent got cloned (found by Ulf)

 - Make sure TAB is still recognized on X11 when shift+tab is pressed. This does also fix going to the previous tabstop on X11.

 - Send EGET_ELEMENT_LEFT also when there won't be a new hovered element

 - Update docs for EGET_ELEMENT_LEFT and EGET_ELEMENT_HOVERED

 - Fix tooltips: Remove them when the element is hidden or removed (thx to seven for finding)
